# dwxconnect

./: LICENSE  README.md
dotnet/: README.md
dotnet/DWXConnect/: DWXConnect.csproj  DWXConnect.sln  DWXExampleClient.cs
dotnet/DWXConnect/api/: Client.cs  EventHandler.cs  Helpers.cs
dotnet/DWXPerformanceTest/: DWXPerformanceTest.csproj  DWXPerformanceTest.sln  PerformanceTest.cs
dotnet/DWXUnitTest/: DWXUnitTest.csproj  DWXUnitTest.sln  UnitTest.cs
dotnet/DWX_Connect/: DWXExampleClient.cs  DWX_Connect.sln
dotnet/DWX_Connect/api/: Client.cs  EventHandler.cs  Helpers.cs
java/: DWXExampleClient.java  README.md  sources.txt
java/api/: Client.java  EventHandler.java  Helpers.java
java/tests/: DWXPerformanceTest.java  DWXUnitTest.java
mql/: DWX_Performance_Test_MT4.mq4  DWX_Performance_Test_MT5.mq5  DWX_Server_MT4.mq4  DWX_Server_MT5.ex5  DWX_Server_MT5.mq5
python/: README.md  dwx_client_example.py  setup.cfg
python/api/: DWX_Client.py  dwx_client.py
python/examples/: DWX_Client_Example.py  dwx_client_example.py
python/tests/: DWX_Multiple_Pairs_Test.py  DWX_Performance_Test.py  DWX_Unit_Test.py  dwx_multiple_pairs_test.py  dwx_performance_test.py  dwx_unit_test.py  symbol_list.txt
